# boomtick

./: .dependency-cruiser.config.mjs  .dockerignore  .env.example  .gitignore  .jscpd.json  .npmrc  .pylintrc  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Dockerfile  INTEGRATION_AUDIT.md  INTEGRATION_ISSUES.md  README.boomtick-pkg.md  README.md  ROADMAP.md  UX Audit: Review UX Changes.md  audit-log.md  audit.py  audit_logs.py  audit_summary.md  bulk_collect_runs.sh  commit_message.txt  download_run.sh  draft.md  drift-audit-status.md  eslint.config.mjs  fix_ci.patch  generate_audit.py  grep_results.txt  hello_world_jules.txt  install.sh  integrity-audit-status.md  issue-audit-2026-07-15.md  issue-audit-2026-07-16.md  issue-audit-2026-07-17.md  issue-audit-2026-07-19.md  issue-audit-2026-07-21.md  issue-audit-2026-07-22.md  issue-audit-status.md  (+30 more)
.agents/: AGENTS.md  AGENT_CONTRACT.md  INSTRUCTION_LAYERS.md  README.md
.boomtick/: workflow-audit-status.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: COLLECTING_AI_LOGS_ISSUE.md  DEVSECOPS_RULESET_ISSUE_TEMPLATE.md  release-drafter.yml
.jules/: config.json
artifacts/: gemini-code-review-verdict.json  (+4 more)
cli/: CHANGELOG.md  MANIFEST.in  README.md  aggregate-prs.sh  ai-debugger.mjs  analyze_overlaps.sh  analyze_workflows.sh  instructions.txt  plan-template.md  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt  review_template.md  setup-agent.sh  snapshot.sh  verify-ai-resolve.sh  verify-workflows.sh  verify.sh  version_utils.py
cli/.boomtick/: workflow-audit-status.md
cli/boomtick_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/dev_tools/: ai_reviewer.py  cli-schema.json  cli.py  collect_ai_reviews.py  config.py  constants.py  daemon.py  generate_aggregate_prs_workflow.py  generate_review_workflow.py  get_ai_context.py  jules_feedback_loop.py  mcp_server.py  models.py  orchestrator.py  pr_overlap.py  repair.py  repo_utils.py  review_read_pass.py  schema_gen.py  schema_utils.py  scope_check.py  submit_review.py  td_cli.py  triage_failure.py  utils.py  ux_report.py  verify_infra.py  verify_versions.py  version_utils.py  vision_audit.py  workflow_summary.py
cli/dev_tools/dev_tools_sdk/: __init__.py  config.py
cli/dev_tools/dev_tools_sdk/services/: gemini.py  github.py  review.py
cli/dev_tools/dev_tools_sdk/utils/: auth.py
cli/dev_tools/handlers/: command_handler.py
cli/dev_tools/resources/: build-repo-context.py  prompt_constants.json  ux-audit.config.json  visual_guidelines.json
cli/dev_tools/services/: ai_service.py  context_builder.py  dependency_graph.py  github.py  jules.py  repair_service.py  vector_store.py  vision_service.py
cli/dev_tools/utils/: __init__.py  git.py
cli/dev_tools/workflows/: __init__.py  context.py  graph.py  node.py  nodes.py  runner.py
cli/logs/: workflow-verification.md
cli/tdw_services/: cli.py  orchestrator.py  utils.py
cli/tdw_services/services/: ai_service.py  dependency_graph.py  github.py  jules.py  vector_store.py  vision_service.py
cli/tests/: test_build_repo_context.py  test_config.py  test_dependency_graph.py  test_fail_fast.py  test_github_diff_parser.py  test_github_no_gh.py  test_github_parser.py  test_install_workflows.py  test_issue_validation_local.py  test_jules_batch_send.py  test_labels.py  test_latency_mitigation.py  test_orchestrator_aggregation.py  test_orchestrator_heuristics.py  test_parse_comment.py  test_plan_issue_audit.py  test_pr_overlap.py  test_review_template_validation.py  test_schema_utils.py  test_verify_ci_metrics.py  test_workflow_audit.py  test_workflow_orchestration.py
cli/tests/services/: test_ai_service_validation.py  test_context_builder.py  test_github.py  test_pr_aggregator.py
dev-tools/: pyproject.toml  search_issue.py  setup-agent.sh
dev-tools/tdw_services/: config.py
(+333 files in other folders)
