[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boomtick-cli"
version = "0.2.0"
description = "BoomTick CLI — agentic dev-tools for GitHub + AI workflows"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0",
    "packaging>=21.3",
    "google-genai",
    "python-dotenv",
    "pydantic",
    "click",
    "PyGithub",
    "semgrep",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.6.0",
    "duckduckgo-search>=6.0.0",
    "setuptools<81.0.0",
    "importlib-resources",
    "langchain-google-genai",
    "langchain-openai"
]

[project.scripts]
td = "dev_tools.cli:main"
td-cli = "dev_tools.cli:main"
tdw-services = "tdw_services.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dev_tools*", "tdw_services*"]

[tool.setuptools.package-data]
"dev_tools" = ["cli-schema.json", "config.json", "project_config.json", "*.json", "resources/*", "verify_versions.py", "pr_overlap.py"]
"*" = ["*.json"]
