[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boomtick-cli"
version = "0.3.1"
description = "BoomTick CLI — agentic dev-tools for GitHub + AI workflows"
authors = [{name = "Ariel Anders"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0",
    "packaging>=21.3",
    "python-dotenv",
    "pydantic",
    "click",
    "PyGithub",
    "semgrep",
    "duckduckgo-search>=6.0.0",
    "setuptools<81.0.0",
    "importlib-resources"
]

[project.urls]
Homepage = "https://github.com/arii/boomtick"
Repository = "https://github.com/arii/boomtick"

[project.optional-dependencies]
ai = [
    "google-genai",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.6.0",
    "langchain-google-genai",
    "langchain-openai"
]

[project.scripts]
td = "dev_tools.cli:main"
td-cli = "dev_tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dev_tools*"]

[tool.setuptools.package-data]
"dev_tools" = [
    "cli-schema.json",
    "verify_versions.py",
    "dist/index.js",
    "dist/config.js",
    "dist/mcp/*.js",
    "dist/tools/*.js",
    "dist/tools/jules/*.js",
    "dist/tools/ddgs_search.py",
    "dist/lib/*.js",
    "resources/*",
    "pr_overlap.py"
]
