[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdw_services"
version = "0.1.0"
description = "Tech-Dancer DevTools SDK"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0",
    "google-genai",
    "python-dotenv",
    "pydantic",
    "click",
    "PyGithub"
]

[project.scripts]
td-cli = "tdw_services.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tdw_services*"]
